Added all the features

--- a/app/views/interviews/_interview.html.erb
+++ b/app/views/interviews/_interview.html.erb
@@ -12,6 +12,6 @@
 <% else %>
   <td> Not Assigned &nbsp; &nbsp; </td>
 <% end %>
-<td> <%= interview.status %></td>
+<td> <%= interview.status %>  &nbsp; &nbsp; </td>
 <td><%= link_to "Download", interview.attachment_url %></td>
 
