--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -2,7 +2,6 @@
 
 <table>
   <%= render 'form_head' %>
-
   <tbody>
     <% @interviews.each do |interview| %>
       <tr>
@@ -15,6 +14,20 @@
     <% end %>
   </tbody>
 </table>
+
+<br> <br>
+
+<% unless current_user.is_admin? %>
+    <%= month_calendar events: @interviews do |date, interviews| %>
+      <%= date %>
+
+      <% interviews.each do |interview| %>
+       <div>
+        <%= interview.start_time %>
+       </div>
+      <% end %>
+    <% end %>
+<% end %>
 
 <br>
 <% unless current_user.is_admin? %>
